# Python-Ethical-Hacking

./: .cache_ggshield  .gitignore  FEATURE_STATUS.md  Final_Code_Mac_Changer.py  Mac_Changer_README.md  PHASE1_IMPLEMENTATION_SUMMARY.md  README.md  arp_spoofer.py  dns_spoofer.py  download.py  malvare.py  network_scanner.py  packet_sniffer.py  readme.md  saved_wifi_pass.py  upload.php
recon-tool-v3/: .gitignore  BUG_FIX_SUMMARY.md  INTERACTIVE_UI_GUIDE.md  LICENSE  PHASE4_PLAN.md  PHASE4_STATUS.md  PHASE5_COMPLETION.md  PHASE5_PLAN.md  PHASE6.1_COMPLETION.md  PHASE6.1_TESTING_RESULTS.md  PHASE6.2_FRONTEND_COMPLETE.md  PHASE6.3_SCAN_MANAGEMENT_COMPLETE.md  PHASE6_PLAN.md  PROJECT_STATUS_AUDIT.md  README.md  TOOL_IMPLEMENTATION_STATUS.md  USAGE_GUIDE.md  demo_default.py  demo_ui.py  main.py  pyproject.toml  recon-tool-v3.sh  requirements.txt  setup.py
recon-tool-v3/config/: defaults.json  scan_profiles.json  tool_configs.json
recon-tool-v3/core/: config.py  logger.py  orchestrator.py  validator.py
recon-tool-v3/docs/: README.md
recon-tool-v3/reporting/: __init__.py  html.py  json.py  markdown.py  pdf.py  report_manager.py
recon-tool-v3/reporting/generators/: html_generator.py  pdf_generator.py  simple_html_generator.py
recon-tool-v3/reporting/templates/html/: main_report.html
recon-tool-v3/scripts/: install.sh  migrate_data.py  setup_env.py
recon-tool-v3/tests/fixtures/: test_data.json
recon-tool-v3/tools/: __init__.py  amass.py  aquatone.py  base.py  censys.py  curl_probe.py  dirb.py  dnsrecon.py  fierce.py  gobuster.py  httpx.py  katana.py  masscan.py  nikto.py  nmap.py  nuclei.py  shodan.py  sslscan.py  subfinder.py  testssl.py  theharvester.py  waybackurls.py  wfuzz.py
recon-tool-v3/ui/: cli.py  interactive.py  interactive_backup.py  interactive_clean.py  terminal.py
recon-tool-v3/web-dashboard/backend/: enhanced_test_api.py  init_db.py  main.py  recon_dashboard.db  requirements.txt
recon-tool-v3/web-dashboard/frontend/: .env.development  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
recon-tool-v3/web-dashboard/frontend/src/: App.tsx  index.css  main.tsx
(+135 files in other folders)
