[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recon-tool-v3"
version = "3.0.0"
description = "Professional reconnaissance toolkit with clean architecture"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "quietcod", email = "quietcod@example.com"}
]
keywords = ["security", "reconnaissance", "penetration-testing", "osint"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: System :: Networking"
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.0.0",
    "jsonschema>=4.0.0",
    "pyyaml>=6.0",
    "reportlab>=4.0.0",
    "jinja2>=3.1.0",
    "structlog>=23.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0"
]
advanced = [
    "psutil>=5.9.0",
    "python-nmap>=0.7.1", 
    "dnspython>=2.4.0",
    "cryptography>=41.0.0"
]

[project.urls]
Homepage = "https://github.com/quietcod/Python-Ethical-Hacking"
Repository = "https://github.com/quietcod/Python-Ethical-Hacking"
Issues = "https://github.com/quietcod/Python-Ethical-Hacking/issues"

[project.scripts]
recon-tool = "main:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=. --cov-report=html --cov-report=term-missing"
